--- a/src/App.css
+++ b/src/App.css
@@ -3,39 +3,73 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+img {
+  border: solid rgb(26, 202, 99) 2px;
+  border-radius: 50%;
+  width: 70px;
+  height: auto;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+ul,h4{
+  margin:0;
+  padding: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+ul{
+  display: flex;
+  gap: 2rem;
 }
 
-.card {
-  padding: 2em;
+ul li {
+  border: 1px solid #0002;
+  border-radius: 5px;
+  box-shadow: 0px 3px 5px -4px #000;
+  padding: .7rem;
+  list-style: none;
+  max-width: 125px;
 }
 
-.read-the-docs {
-  color: #888;
+ul li p {
+  font-size: 14px;
+}
+
+div form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+  padding: 2.5rem 0;
+  margin: 0 auto;
+}
+
+div form input {
+  padding: 10px 15px;
+  max-width: 15rem;
+}
+
+div form textarea {
+  width: 70%;
+  resize: none;
+}
+
+div form button {
+  padding: 10px;
+  border: 0;
+  color: #555;
+  background-color: aliceblue;
+  box-shadow: 0px 0px 1px 0px #aaa;
+  transition: box-shadow .2s, transform .3s, font-weight;
+}
+
+div form button:hover {
+  padding: 10px;
+  border: 0;
+  background-color: aliceblue;
+  transform: scale(1.05);
+  font-weight: 500;
+  cursor: pointer;
+  box-shadow: 0px 0px 1px 0px #111;
 }
